Подправил замечания. Добавил мета класс в модель Post(сортировка по дате) и добавил декоратор @admin.register() в admin.py

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -5,15 +5,7 @@
 <div class="container py-5">
   <article>
     {% for post in posts %}
-      <ul>
-        <li>
-          Автор: {{ post.author.get_full_name }}
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      <p>{{ post.text }}</p>
+      {% include 'includes/post_card.html' %}
       <ul>
       <li>
         {% if post.group %}
