создал страницу регистрации и новое приложение core с фильтрами bootstrap(css)

--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -16,9 +16,9 @@
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    {% block title %}
+    <title>{% block title %}
         Yatube - проект
-    {% endblock %}
+      {% endblock %}</title>
   </head>
   <body>
     <header>
