--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,6 +1,6 @@
 <!-- templates/posts/index.html -->
 {% extends 'base.html' %}
-{% block title %}<title>Последние обновления на сайте</title>{% endblock %}
+{% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
 <div class="container py-5">
   <article>
