--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,9 +1,7 @@
 {% load static %}
-<div class="container">
+<div class="navbar navbar-light" style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="{% url 'posts:index' %}">
     <img src="{% static 'img/logo.png' %}" width="30"
          height="30" class="d-inline-block align-top" alt="">
-    <span style="color:red">Ya</span>tube
-  </a>
+    <span style="color:red">Ya</span>tube</a>
 </div>
-
