--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -1,2 +1,3 @@
-<!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
-<p>©Copyright <span style="color:red">Ya</span>tube</p>
+<footer class="border-top text-center py-3">
+  <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>
+</footer>
