--- a/yatube/templates/users/password_change_form.html
+++ b/yatube/templates/users/password_change_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Изменение пароля{% endblock %}
 {% block content %}
-      <div class="container py-5"> 
+      <div class="container py-5">
         <div class="row justify-content-center">
           <div class="col-md-8 p-5">
             <div class="card">
@@ -9,21 +9,21 @@
                 Изменить пароль
               </div>
               <div class="card-body">
-                <form method="post" action="{% url 'users:password_change' %}">
+                <form method="post">
                   {% csrf_token %}
                   <input type="hidden" name="csrfmiddlewaretoken" value="">
                   <div class="form-group row my-3 p-3">
                     <label for="id_old_password">
                       Старый пароль
                       <span class="required text-danger">*</span>
-                    </label>    
+                    </label>
                     <input type="password" name="old_password" autofocus class="form-control" required id="id_old_password">
                   </div>
                   <div class="form-group row my-3 p-3">
                     <label for="id_new_password1">
                       Новый пароль
                       <span class="required text-danger">*</span>
-                    </label>    
+                    </label>
                     <input type="password" name="new_password1" class="form-control" required id="id_new_password1">
                       <small id="id_new_password1-help" class="form-text text-muted">
                         <ul><li>Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.</li><li>Ваш пароль должен содержать как минимум 8 символов.</li><li>Ваш пароль не может быть одним из широко распространённых паролей.</li><li>Ваш пароль не может состоять только из цифр.</li></ul>
@@ -33,7 +33,7 @@
                     <label for="id_new_password2">
                       Подтверждение нового пароля
                       <span class="required text-danger">*</span>
-                    </label>    
+                    </label>
                     <input type="password" name="new_password2" class="form-control" required id="id_new_password2">
                   </div>
                   <div class="col-md-6 offset-md-4">
