--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,10 +1,11 @@
 <!-- templates/posts/index.html -->
 {% extends 'base.html' %}
 {% block title %}Последние обновления на сайте{% endblock %}
+{% block header %}Последние обновления на сайте{% endblock %}
 {% block content %}
 <div class="container py-5">
   <article>
-    {% for post in posts %}
+    {% for post in page_obj %}
       {% include 'includes/post_card.html' %}
       <ul>
       <li>
@@ -20,5 +21,6 @@
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
     </article>
+  {% include 'includes/paginator.html' %}
 </div>
 {% endblock %}
