--- a/yatube/templates/users/password_change_form.html
+++ b/yatube/templates/users/password_change_form.html
@@ -9,9 +9,8 @@
                 Изменить пароль
               </div>
               <div class="card-body">
-                <form method="post">
+                <form method="post" action="{% url 'users:password_change' %}">
                   {% csrf_token %}
-                  <input type="hidden" name="csrfmiddlewaretoken" value="">
                   <div class="form-group row my-3 p-3">
                     <label for="id_old_password">
                       Старый пароль
